# website

./: .gitignore  1  404.html  Cargo.toml  Idee proiect  README.md  build.rs  build_slides.sh  build_website.sh  index.html  index.md  markdown-page.html  memory.x  package-lock.json  sitemap.xml  smartwatch_documentation.docx  smartwatch_schema.kicad_sch  structure.txt  ~smartwatch_schema.kicad_sch.lck
.cargo/: config.toml
.github/PULL_REQUEST_TEMPLATE/: project.md
.github/workflows/: image-check.yml
.gitlab/merge_request_templates/: project.md
andra_sara.duminica/: index.md
assets/css/: styles.d370507e.css
assets/js/: 003297e2.1f0b184a.js  003297e2.48aed725.js  003297e2.5f804f73.js  003297e2.f3f3c0e0.js  00568b7c.179df5f3.js  00b5ea84.62565f88.js  00b5ea84.a33b2dfe.js  0127231d.2ea7fb93.js  0127231d.59580dd7.js  01b7701d.456a0b3c.js  01b7701d.6edfc798.js  01b7701d.7688e893.js  02270fa1.900ca9d6.js  024c48f4.ee0a1a64.js  02789d24.063700b4.js  02789d24.1fb33f80.js  02789d24.db0c0bfe.js  02c4bd1a.536fb173.js  02c5763b.05af7346.js  02c5763b.2e92e42c.js  03c3c359.4a113b4f.js  03c3c359.b47a0c99.js  0475c81d.731be72a.js  0475c81d.ecd45bb8.js  0475c81d.fa635604.js  050856a0.db5688b2.js  05a51010.6d7d4f19.js  05fd76c7.040897c4.js  05fd76c7.7c1fc9bc.js  05fd76c7.9dd146b0.js  0606bb84.0b795bd5.js  0680d229.f7acf1d6.js  06ac55dc.f267d93d.js  06f6f67b.5fdd0236.js  078534f5.b9dccf2d.js  078534f5.c68fc732.js  078534f5.cc2b2762.js  0828412d.0f74ab0d.js  08b5dc8d.0cef38ee.js  08b5dc8d.26bdf7e2.js  (+2110 more)
docs/acs_cc/: project.html  welcome.html
docs/acs_cc/category/: lab.html  lecture.html  project.html  projects-2025.html  projects-2026.html  tutorials.html
docs/acs_cc/lab/: 00.0.html  00.1.html  00.html  01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html
docs/acs_cc/lecture/: 01.html  02.html
docs/acs_cc/project/2025/: adelin_andrei.fulop.html  adenboba.html  alessia.lazar.html  alexandra.diaconu03.html  alexandra.manolache.html  alexandru.buiac.html  alexandru.ghita0312.html  alexandru.grecu2711.html  alexandru.samson.html  alexia_andra.mihai.html  alin_ion.savu.html  amalia.grumazescu.html  ana_corina.ionescu.html  ana_maria.bogdan.html  ana_maria.duminica.html  anastasia.luca.html  anca_teodora.andrei.html  andreea.ureche0212.html  andrei.andreescu03.html  andrei.androne.html  andrei.armega.html  andrei.braniste.html  andrei.cirstescu.html  andrei.ciucan.html  andrei.girleanu.html  andrei.oprisor.html  andrei.radu0902.html  andrei.salomia.html  andrei.stan0605.html  andrei.stan2605.html  andrei.zdrali.html  andrei_daniel.calu.html  andrei_ioan.timofte.html  andreia.toaca.html  antonio.carazeanu.html  antonio.crantea.html  bianca_ioana.mihai.html  bogdan_florin.popa.html  carla_maria.rusu.html  carmen.murarescu.html  (+93 more)
docs/acs_cc/tutorial/: bitwise-operations.html  electronics.html  git.html  kicad.html
docs/acs_cc/tutorials/: embassy.html
docs/fils_en/: project.html  welcome.html
docs/fils_en/category/: lab.html  lecture.html  project.html  projects-2024.html  projects-2025.html  projects-2026.html  tutorials.html
docs/fils_en/exam/: lab_test.html
docs/fils_en/lab/: 00.0.html  00.1.html  00.html  01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html
docs/fils_en/lecture/: 01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  11.html
docs/fils_en/tutorial/: bitwise-operations.html  electronics.html  git.html  kicad.html
docs/fils_en/tutorials/: embassy.html
hardware_code/: Cargo.toml  build.rs  memory.x
hardware_code/.cargo/: config.toml
hardware_code/src/: buzzer.rs  distance.rs  lcd.rs  led.rs  main.rs  pins.rs
maria.gugulea/: index.md
slides/: package-lock.json
slides/acs_cc/01/: 404.html  index.html
slides/acs_cc/02/: 404.html  index.html
slides/acs_cc/03/: 404.html  index.html
slides/acs_cc/04/: 404.html  index.html
slides/acs_cc/05/: 404.html  index.html
slides/acs_cc/06/: 404.html  index.html
slides/acs_cc/07/: 404.html  index.html
slides/acs_cc/08/: 404.html
slides/acs_cc/09/: index.html
slides/acs_cc/10/: index.html
slides/fils_en/01/: 404.html  index.html
slides/fils_en/02/: index.html
slides/fils_en/03/: 404.html  index.html
slides/fils_en/04/: 404.html
slides/fils_en/05/: 404.html  index.html
slides/fils_en/06/: 404.html  index.html
slides/fils_en/07/: 404.html  index.html
slides/fils_en/08/: 404.html  index.html
slides/fils_en/09/: 404.html  index.html
slides/fils_en/10/: index.html
slides/fils_en/11/: index.html
src/: dares.json  irqs.rs  main.rs  truths.json
vlad.duica/: index.md
website/: package-lock.json
website/lab/: 00.1.md  00.md
website/lab/01/: index.mdx
website/lab/02/: index.mdx
website/lab/03/: index.mdx
website/lab/04/: index.md
website/lab/05/: index.mdx
website/lab/06/: index.mdx
website/lab/07/: index.mdx
website/lab/09/: index.md  index.mdx
website/static/img/: kicad.webp:Zone.Identifier
website/tutorial/: bitwise-operations.md  git.md
website/tutorial/embassy/: index.md
website/versioned_docs/version-acs_cc/: Soby - Shortcut.lnk
website/versioned_docs/version-fils_en/project/2025/andrei.andreescu/: Cargo.toml  build.rs  index.md  memory.x
website/versioned_docs/version-fils_en/project/2025/andrei.andreescu/cargo/: config.toml
website/versioned_docs/version-fils_en/project/2025/andrei.andreescu/src/: main.rs
website/versioned_docs/version-fils_en/project/2026/denisa.filip/: Cargo.toml  README.md  build.rs  index.md  memory.x
website/versioned_docs/version-fils_en/project/2026/denisa.filip/.cargo/: config.toml
website/versioned_docs/version-fils_en/project/2026/denisa.filip/src/: buzzer.rs  distance.rs  lcd.rs  led.rs  main.rs  pins.rs
website/versioned_docs/version-fils_en/project/2026/jessica.savage/project_cd/: Cargo.toml  desktop.ini
website/versioned_docs/version-fils_en/project/2026/jessica.savage/project_cd/.cargo/: config.toml
website/versioned_docs/version-fils_en/project/2026/jessica.savage/project_cd/src/: main.rs
(+6724 files in other folders)
