[package]
name = "rusty-ducky"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use the exact same git revision for all embassy crates to ensure compatibility
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "rp235xa", "time-driver", "critical-section-impl", "unstable-pac"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }

# Networking for later
cyw43 = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }

# Force version 0.9.0 to match embassy-usb
usbd-hid = "0.9.0" 
static_cell = "2.1.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"

[profile.release]
debug = true
lto = true
opt-level = "z"