[package]
name = "cd-menu"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = [
    "stm32u545re",
    "memory-x",
    "exti",
    "time-driver-any",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "platform-cortex-m",
    "executor-thread",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "tick-hz-32_768",
] }


cortex-m     = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt  = "0.7.3"
panic-probe  = { version = "0.3", features = ["print-defmt"] }
defmt        = "0.3"
defmt-rtt    = "0.4"
heapless     = "0.8"
embedded-hal = "0.2.7"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = 2

[profile.dev]
opt-level = "z"
debug = 2